Update contributions journal for Group 10